[gd_scene load_steps=3 format=3 uid="uid://bv33if0li3y4g"]

[ext_resource type="Script" path="res://Escenas/nivel1_Mario/Interacciones/interaccion_ojo_horus.gd" id="1_qt5wr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kpiwh"]
size = Vector2(65.3125, 59.5938)

[node name="InteraccionOjoHorus" type="StaticBody2D"]
script = ExtResource("1_qt5wr")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_kpiwh")

[node name="PanelInteraccionOjo" type="Panel" parent="."]
visible = false
offset_left = -23.0
offset_top = -55.0
offset_right = 23.0
offset_bottom = -34.0

[node name="Label" type="Label" parent="PanelInteraccionOjo"]
texture_filter = 1
layout_mode = 0
offset_left = 1.0
offset_top = 3.0
offset_right = 45.0
offset_bottom = 17.0
theme_override_font_sizes/font_size = 10
text = "PRESS [E]"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
